# python-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/poetry_template/: main.py
